<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.seromatupgrade.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_manual_regulation"
        android:name="com.example.seromatupgrade.ui.manual_regulation.ManualRegulationFragment"
        android:label="@string/title_manual_regulation"
        tools:layout="@layout/fragment_manual_regulation" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.seromatupgrade.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>