<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/editTextTempSp"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/ex_15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTempLb" />

    <EditText
        android:id="@+id/editTextHumSp"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/ex_25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHumLb" />

    <EditText
        android:id="@+id/editTextTempH"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="72dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/ex_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextTempSp" />

    <EditText
        android:id="@+id/editTextHumH"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/ex_80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHumHb" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/manual_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/manual_text_temperature"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <TextView
        android:id="@+id/textViewTempLb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/manual_lb"
        app:layout_constraintEnd_toEndOf="@+id/editTextTempSp"
        app:layout_constraintStart_toStartOf="@+id/editTextTempSp"
        app:layout_constraintTop_toBottomOf="@+id/textViewTemperature" />

    <TextView
        android:id="@+id/textViewTempHb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manual_ub"
        app:layout_constraintEnd_toEndOf="@+id/editTextTempH"
        app:layout_constraintStart_toStartOf="@+id/editTextTempH"
        app:layout_constraintTop_toTopOf="@+id/textViewTempLb" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTempSp" />

    <TextView
        android:id="@+id/textViewHumLb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/manual_lb"
        app:layout_constraintEnd_toEndOf="@+id/editTextHumSp"
        app:layout_constraintStart_toStartOf="@+id/editTextHumSp"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textViewHumHb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/manual_ub"
        app:layout_constraintEnd_toEndOf="@+id/editTextHumH"
        app:layout_constraintStart_toStartOf="@+id/editTextHumH"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/changeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/manual_text_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextHumSp" />

    <TextView
        android:id="@+id/textViewHomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:text="@string/manual_text_humidity"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTemperature" />

</androidx.constraintlayout.widget.ConstraintLayout>