<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/textViewAvgHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/home_empty"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewHomeAvgHumidity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewHomeAvgHumidity"
        app:layout_constraintTop_toTopOf="@+id/textViewHomeAvgHumidity" />

    <TextView
        android:id="@+id/textViewMeasurementTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/home_empty"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toEndOf="@+id/textViewHomeTemperature"
        app:layout_constraintTop_toBottomOf="@+id/textViewMeasurementDate" />

    <TextView
        android:id="@+id/textViewMeasurementHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/home_empty"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toEndOf="@+id/textViewHomeHumidity"
        app:layout_constraintTop_toBottomOf="@+id/textViewMeasurementTemperature" />

    <TextView
        android:id="@+id/textViewHomeTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/current_temperature"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDate" />

    <TextView
        android:id="@+id/textViewHomeHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/current_humidity"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewHomeTemperature" />

    <TextView
        android:id="@+id/textViewMeasurementDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_empty"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toEndOf="@+id/textViewDate"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timestamp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/temperatureChart"
        android:layout_width="0dp"
        android:layout_height="187dp"
        android:layout_marginTop="16dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/humidifierStatusText" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/humidityChart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperatureChart"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/coolerStatusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="Cooling: -"
        app:layout_constraintStart_toStartOf="@+id/textViewHomeHumidity"
        app:layout_constraintTop_toBottomOf="@+id/textViewHomeHumidity" />

    <TextView
        android:id="@+id/humidifierStatusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:text="Humidifier: -"
        app:layout_constraintBottom_toBottomOf="@+id/coolerStatusText"
        app:layout_constraintStart_toEndOf="@+id/coolerStatusText"
        app:layout_constraintTop_toTopOf="@+id/coolerStatusText" />

    <TextView
        android:id="@+id/tempBoundariesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/textViewMeasurementTemperature"
        app:layout_constraintStart_toEndOf="@+id/textViewMeasurementTemperature"
        app:layout_constraintTop_toTopOf="@+id/textViewMeasurementTemperature" />

    <TextView
        android:id="@+id/humBoundariesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/textViewMeasurementHumidity"
        app:layout_constraintStart_toStartOf="@+id/tempBoundariesText"
        app:layout_constraintTop_toTopOf="@+id/textViewMeasurementHumidity" />

    <TextView
        android:id="@+id/textViewHomeAvgHumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/avg_humidity"
        app:layout_constraintStart_toStartOf="@+id/textViewHomeHumidity"
        app:layout_constraintTop_toBottomOf="@+id/textViewHomeHumidity" />

</androidx.constraintlayout.widget.ConstraintLayout>